# novacube

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  prepare-assets.py
android-project/: .gitignore  settings.gradle
android-project/app/: build.gradle
android-project/app/jni/: SDL
android-project/app/src/main/: AndroidManifest.xml
android-project/app/src/main/java/: org
android-project/app/src/main/java/net/novacubegame/: MainActivity.java
android-project/app/src/main/res/values/: strings.xml  themes.xml
android-project/app/src/main/res/values-night/: themes.xml
android-project/gradle/wrapper/: gradle-wrapper.properties
docs/: GAME.md  SPIKES.md
include/novacube/: sdl_util.h  ui.h  version.h.in
libs/cvkm/: cvkm.h
src/: main.c  ui.c
src-assets/shaders/: cube.frag  cube.vert  reticle.frag  reticle.vert  ui-image.frag  ui-image.vert  ui.frag  ui.vert
